syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.otus.numbers.protobuf";

service NumbersService {
  rpc GetNumberStream (NumberRequest) returns (stream NumberResponse);
}

message NumberRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumberResponse {
  int32 value = 1;
}